tests/baselines/reference/multipleStringIndexers.errors.txt
==== tests/cases/compiler/multipleStringIndexers.ts (6 errors) ====
    // Multiple indexers of the same type are an error
    
    class C {
        [x: string]: string;
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~
!!! multipleStringIndexers.ts(5,5): error TS2232: Duplicate string index signature.
    }
    
    interface I {
        [x: string]: string;
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~
!!! multipleStringIndexers.ts(10,5): error TS2232: Duplicate string index signature.
    }
    
    var a: {
        [x: string]: string;
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~
!!! multipleStringIndexers.ts(15,5): error TS2232: Duplicate string index signature.
    }
    
    var b: {
        [x: string]: string;
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~
!!! multipleStringIndexers.ts(20,5): error TS2232: Duplicate string index signature.
    } = { y: '' }
    
    class C2<T> {
        [x: string]: string;
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~
!!! multipleStringIndexers.ts(25,5): error TS2232: Duplicate string index signature.
    }
    
    interface I2<T> {
        [x: string]: string;
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~
!!! multipleStringIndexers.ts(30,5): error TS2232: Duplicate string index signature.
    }